[package]
name = "lurk-sansio"
version = "0.1.0"
edition = "2024"
description = "Sans-IO game engine for the Lurk protocol — pure logic, no networking"
license = "MIT"

[package.metadata.docs.rs]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]

[dependencies]
indexmap = { version = "2.14.0", features = ["serde"] }
lurk_lcsc = "2.3.20"
serde = { version = "1.0", features = ["derive", "rc"] }
