[package]
name = "lurk_engine"
version = "1.0.0"
authors = ["Riley Ziegler", "S. Seth Long, Ph.D"]
description = "Sans-IO game engine for the Lurk protocol"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/The24Kings/lurk_engine"
rust-version = "1.85"

[dependencies]
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }

lurk_protocol = { path = "../lurk_protocol" }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
